testing css fix for play button on iOS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -207,6 +207,11 @@ body {
 Custom Styles
 */
 
+*::-webkit-media-controls-start-playback-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
 
 @media (min-width: 62em) {
 .bg-inverse {
